--- a/CSC209/Hwks/Hwk1/index.css
+++ b/CSC209/Hwks/Hwk1/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('background.jpg');
+    background-image: url('Images/background.jpg');
 }
 h3 {text-align: center;}
 table, th, td {
